# shioaji-bars

./: .gitignore  LICENSE  README.md  pyproject.toml
shioaji_bars/: __init__.py  __main__.py  cli.py  contracts.py  fetcher.py  parquet_io.py  session.py
tests/: test_cli.py  test_contracts.py  test_fetcher_unit.py  test_live.py  test_parquet_io.py  test_session.py
